[gd_scene load_steps=10 format=3 uid="uid://coa17qjlk5v8y"]

[ext_resource type="Texture2D" uid="uid://dogcjfm7vbtns" path="res://assets/sky1.png" id="1_a8nhx"]
[ext_resource type="Script" path="res://src/world_manager.gd" id="1_ufc01"]
[ext_resource type="PackedScene" uid="uid://pgofyu12eh6n" path="res://src/serial_port_controller.tscn" id="2_djxjw"]
[ext_resource type="Texture2D" uid="uid://dndhys58ejjp1" path="res://assets/long_tree.svg" id="2_qyaja"]
[ext_resource type="Texture2D" uid="uid://c7c6viexs13cm" path="res://assets/hills/Hills Layer 05.png" id="3_lky7k"]
[ext_resource type="PackedScene" uid="uid://csioa30rlb4m4" path="res://src/leaf.tscn" id="5_281m6"]
[ext_resource type="PackedScene" uid="uid://v8ythwy1ykle" path="res://src/obstacle_spawner.tscn" id="6_etdqo"]
[ext_resource type="PackedScene" uid="uid://b7lv4f1gnoj84" path="res://src/wind_spawner.tscn" id="8_t3i1v"]
[ext_resource type="PackedScene" uid="uid://cdp3te5iyyqb" path="res://src/chat_bubble.tscn" id="9_5d0mo"]

[node name="World" type="StaticBody2D"]
script = ExtResource("1_ufc01")

[node name="SerialPortTest" parent="." instance=ExtResource("2_djxjw")]
visible = false

[node name="Skybox" type="Sprite2D" parent="."]
position = Vector2(807, 324)
texture = ExtResource("1_a8nhx")

[node name="Tree" type="Sprite2D" parent="."]
position = Vector2(780, 515)
scale = Vector2(2.50582, 2.50582)
texture = ExtResource("2_qyaja")

[node name="Floor" type="Sprite2D" parent="."]
position = Vector2(761, 81)
scale = Vector2(6.60547, 6.60547)
texture = ExtResource("3_lky7k")

[node name="Leaf" parent="." instance=ExtResource("5_281m6")]
position = Vector2(748, 171)
rotation = 1.5708
scale = Vector2(0.080244, 0.080244)

[node name="Leaf2" parent="." instance=ExtResource("5_281m6")]
position = Vector2(735, 423)
rotation = 1.5708
scale = Vector2(0.080244, 0.080244)

[node name="Leaf3" parent="." instance=ExtResource("5_281m6")]
position = Vector2(733, 574)
rotation = 1.5708
scale = Vector2(0.080244, 0.080244)

[node name="Leaf4" parent="." instance=ExtResource("5_281m6")]
position = Vector2(806, 304)
rotation = 3.05433
scale = Vector2(0.080244, 0.080244)

[node name="Leaf5" parent="." instance=ExtResource("5_281m6")]
position = Vector2(827, 486)
rotation = 3.00546
scale = Vector2(0.080244, 0.080244)

[node name="ObstacleSpawner1" parent="." instance=ExtResource("6_etdqo")]
visible = true
position = Vector2(-255, 170)

[node name="ObstacleSpawner2" parent="." instance=ExtResource("6_etdqo")]
visible = true
position = Vector2(-255, 476)
spawner_id = 2
obstacle_direction = "right"
obstacle_level = "middle"

[node name="ObstacleSpawner3" parent="." instance=ExtResource("6_etdqo")]
visible = true
position = Vector2(-255, 782)
spawner_id = 3
obstacle_direction = "right"
obstacle_level = "bottom"

[node name="ObstacleSpawner4" parent="." instance=ExtResource("6_etdqo")]
visible = true
position = Vector2(780, 170)

[node name="ObstacleSpawner5" parent="." instance=ExtResource("6_etdqo")]
visible = true
position = Vector2(780, 26)
spawner_id = 5
obstacle_direction = "down"
obstacle_level = "middle"

[node name="ObstacleSpawner6" parent="." instance=ExtResource("6_etdqo")]
visible = true
position = Vector2(780, 1232)
spawner_id = 6
obstacle_direction = "up"
obstacle_level = "bottom"

[node name="ObstacleSpawner7" parent="." instance=ExtResource("6_etdqo")]
visible = true
position = Vector2(1870, 170)

[node name="ObstacleSpawner8" parent="." instance=ExtResource("6_etdqo")]
visible = true
position = Vector2(1870, 476)
spawner_id = 8
obstacle_direction = "left"
obstacle_level = "middle"

[node name="ObstacleSpawner9" parent="." instance=ExtResource("6_etdqo")]
visible = true
position = Vector2(1870, 782)
spawner_id = 9
obstacle_direction = "left"
obstacle_level = "bottom"

[node name="WindSpawner_inactive1" parent="." instance=ExtResource("8_t3i1v")]
position = Vector2(595, 170)
wind_direction = "left"

[node name="WindSpawner3" parent="." instance=ExtResource("8_t3i1v")]
position = Vector2(595, 476)
spawner_id = 3
wind_direction = "left"

[node name="WindSpawner6" parent="." instance=ExtResource("8_t3i1v")]
position = Vector2(595, 782)
spawner_id = 6
wind_direction = "left"

[node name="WindSpawner_inactive3" parent="." instance=ExtResource("8_t3i1v")]
position = Vector2(780, 170)
spawner_id = 4
wind_direction = "center"

[node name="WindSpawner2" parent="." instance=ExtResource("8_t3i1v")]
position = Vector2(780, 596)
spawner_id = 2
wind_direction = "up"

[node name="WindSpawner5" parent="." instance=ExtResource("8_t3i1v")]
position = Vector2(780, 686)
spawner_id = 5
wind_direction = "down"

[node name="WindSpawner_inactive2" parent="." instance=ExtResource("8_t3i1v")]
position = Vector2(950, 170)
spawner_id = 7
wind_direction = "right"

[node name="WindSpawner1" parent="." instance=ExtResource("8_t3i1v")]
position = Vector2(950, 476)
spawner_id = 1
wind_direction = "right"

[node name="WindSpawner4" parent="." instance=ExtResource("8_t3i1v")]
position = Vector2(950, 782)
spawner_id = 4
wind_direction = "right"

[node name="ChatBubble" parent="." instance=ExtResource("9_5d0mo")]
position = Vector2(875, 243)
rotation = 0.359538
scale = Vector2(3.6197, 3.6197)

[node name="Leaf6" parent="." instance=ExtResource("5_281m6")]
position = Vector2(809, 539)
rotation = 3.00546
scale = Vector2(0.080244, 0.080244)

[node name="Leaf7" parent="." instance=ExtResource("5_281m6")]
position = Vector2(808, 465)
rotation = 3.00546
scale = Vector2(0.080244, 0.080244)

[node name="Leaf8" parent="." instance=ExtResource("5_281m6")]
position = Vector2(813, 507)
rotation = 3.00546
scale = Vector2(0.080244, 0.080244)

[node name="Leaf9" parent="." instance=ExtResource("5_281m6")]
position = Vector2(829, 506)
rotation = 3.00546
scale = Vector2(0.080244, 0.080244)

[node name="Leaf10" parent="." instance=ExtResource("5_281m6")]
position = Vector2(810, 341)
rotation = 3.05433
scale = Vector2(0.080244, 0.080244)

[node name="Leaf11" parent="." instance=ExtResource("5_281m6")]
position = Vector2(802, 276)
rotation = 3.05433
scale = Vector2(0.080244, 0.080244)

[node name="Leaf12" parent="." instance=ExtResource("5_281m6")]
position = Vector2(826, 310)
rotation = 3.05433
scale = Vector2(0.080244, 0.080244)

[node name="Leaf13" parent="." instance=ExtResource("5_281m6")]
position = Vector2(808, 359)
rotation = 3.05433
scale = Vector2(0.080244, 0.080244)
